--- a/HPetriNets.cabal
+++ b/HPetriNets.cabal
@@ -20,6 +20,16 @@ library
   exposed-modules:     Language.PN.EDSL, Language.PN.Test, Language.PN.Visualize, Language.PN.DataType.Types
   -- other-modules:
   other-extensions:    TypeSynonymInstances, FlexibleInstances, ExistentialQuantification, RecordWildCards
-  build-depends:       base >=4.10 && <4.11, containers >=0.5 && <0.6, directory >=1.3 && <1.4, process >=1.6 && <1.7, mtl
+  build-depends:       base >=4.10 && <4.11, containers >=0.5 && <0.6, directory >=1.3 && <1.4, process >=1.6 && <1.7, mtl >= 2.2.2 && < 2.3
   hs-source-dirs:      src
+  Ghc-Options:         -Wall
   default-language:    Haskell2010
+
+Test-suite reference
+  Hs-Source-Dirs: tests
+  Main-Is: Hook.hs
+  Type: exitcode-stdio-1.0
+  Build-Depends: base, HPetriNets, directory
+  Ghc-Options: -Wall
+  Default-Language: Haskell2010
+
